--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,4 +1,5 @@
 #H2 Server Properties
+#Thu Dec 22 11:20:23 CET 2016
 0=JHipster H2 (Memory)|org.h2.Driver|jdbc\:h2\:mem\:kubashop|kubaShop
 webAllowOthers=true
 webPort=8082
